add_executable(yolo_demo_1way "yolo_demo_1way.mm")
target_link_libraries(yolo_demo_1way ${PROJECT_NAME})

add_executable(yolo_demo_4way "yolo_demo_4way.mm")
target_link_libraries(yolo_demo_4way ${PROJECT_NAME})

add_executable(yolo_demo_6way "yolo_demo_6way.mm")
target_link_libraries(yolo_demo_6way ${PROJECT_NAME})

add_executable(yolo_demo_8way "yolo_demo_8way.mm")
target_link_libraries(yolo_demo_8way ${PROJECT_NAME})